--- a/EastSwedenHack/nbproject/private/private.properties
+++ b/EastSwedenHack/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.json-20141113.jar=/Users/Daniel/Documents/East-Sweden-Hack-2015/json-20141113.jar
 user.properties.file=/Users/Daniel/Library/Application Support/NetBeans/8.0/build.properties
